<resources>
    <string name="app_name">K234112EApp</string>
    <string name="str_welcome">Welcome to CUC CU</string>
    <string name="str_say_hello">Hello TRAN DUY THANH</string>
    <string name="str_clickme_to_say_hello">Say Hello babi</string>
    <string name="str_login_system">Login System</string>
    <string name="str_username">Username:</string>
    <string name="str_hint_username">Enter your username</string>
    <string name="str_password">Password:</string>
    <string name="str_login">Login</string>
    <string name="str_exit">Exit</string>
    <string name="str_hint_password">Enter your password:</string>
    <string name="str_login_success">Login success</string>
    <string name="str_login_failed">Login failed</string>
    <string name="str_mc">MC</string>
    <string name="str_mr">MR</string>
    <string name="str_mplus">M+</string>
    <string name="str_mminus">M-</string>
    <string name="str_ms">MS</string>
    <string name="str_m">M</string>
    <string name="str_open_calculator_app">Open Calculator App</string>
    <string name="str_save_login_info">Save Login Information</string>
    <string name="str_login_role">Login Role</string>
    <string name="str_role_admin">Administrator</string>
    <string name="str_role_employee">Employee</string>
    <string name="str_employee_id">Employee ID:</string>
    <string name="str_employee_name">Employee Name:</string>
    <string name="str_phone_number">Phone Number:</string>
    <string name="str_save">Save</string>
    <string name="str_delete">Delete</string>
    <string name="str_confirm_exit">Bae, u wanna leave?</string>
    <string name="str_department">Department</string>
    <string name="str_list_employee">List Employee</string>
    <string name="str_birthplace">Birth Place:</string>
    <string name="str_order_report">Order Report</string>
    <string name="str_oder_status_all">All Status</string>
    <string name="str_order_status_completed">Completed</string>
    <string name="str_order_status_not_payment">Not Payment</string>
    <string name="str_order_status_on_logistic">On Logistic</string>
    <string name="str_order_status_customer_complain">Customer Complain</string>
    <string-array name="array_birthplace">
        <item>An Giang</item>
        <item>Bà Rịa - Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Định</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cần Thơ</item>
        <item>Cao Bằng</item>
        <item>Đà Nẵng</item>
        <item>Đắk Lắk</item>
        <item>Đắk Nông</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Nội</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hải Phòng</item>
        <item>Hậu Giang</item>
        <item>Hòa Bình</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Phú Yên</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thừa Thiên Huế</item>
        <item>Tiền Giang</item>
        <item>TP. Hồ Chí Minh</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>
    </string-array>
</resources>