<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mnu_order_status_all"
        android:title="@string/str_oder_status_all" />
    <item
        android:id="@+id/mnu_order_status_completed"
        android:title="@string/str_order_status_completed" />
    <item
        android:id="@+id/mnu_order_status_not_payment"
        android:title="@string/str_order_status_not_payment" />
    <item
        android:id="@+id/mnu_order_status_on_logistic"
        android:title="@string/str_order_status_on_logistic" />
    <item
        android:id="@+id/mnu_order_status_customer_complain"
        android:title="@string/str_order_status_customer_complain" />
</menu>